--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,35 +1,89 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
+def cfg = rootProject.ext.configuration
+def libs = rootProject.ext.libs
+def libsVersions = rootProject.ext.libraries
+
+def BASE_API_URL = "API_URL"
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion "29.0.2"
+    compileSdkVersion cfg.compileSdkVersion
+
     defaultConfig {
-        applicationId "com.galodb.gtest"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        applicationId cfg.applicationId
+        minSdkVersion cfg.minSdkVersion
+        targetSdkVersion cfg.targetSdkVersion
+        versionCode cfg.versionCode
+        versionName "${cfg.version_versionMajor}.${cfg.version_versionMinor}.${cfg.version_versionPatch}"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            applicationIdSuffix ".debug"
+            versionNameSuffix "_DEBUG"
+        }
+    }
+
+    flavorDimensions "default"
+
+    productFlavors {
+        production {
+            buildConfigField "String", BASE_API_URL, project.property('BASE_API_URL_PRODUCTION')
+        }
+        develop {
+            buildConfigField "String", BASE_API_URL, project.property('BASE_API_URL_DEVELOP')
         }
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation project(':domain')
+    implementation project(':data')
+
+    //Kotlin
+    implementation libs.kotlin
+
+    //Appcompat
+    implementation "androidx.appcompat:appcompat:${libsVersions.androidx}"
+    implementation "androidx.core:core-ktx:${libsVersions.androidx}"
+    implementation "androidx.recyclerview:recyclerview:${libsVersions.recycler}"
+
+    //Constraint Layout
+    implementation "com.android.support.constraint:constraint-layout:${libsVersions.constraint}"
+
+    //Dagger 2
+    implementation "com.google.dagger:dagger:${libsVersions.dagger}"
+    implementation "com.google.dagger:dagger-android:${libsVersions.dagger}"
+    implementation "com.google.dagger:dagger-android-support:${libsVersions.dagger}"
+    kapt "com.google.dagger:dagger-compiler:${libsVersions.dagger}"
+    kapt "com.google.dagger:dagger-android-processor:${libsVersions.dagger}"
+
+    //LifeCycles
+    implementation "android.arch.lifecycle:extensions:${libsVersions.lifecycles}"
+    implementation "android.arch.lifecycle:reactivestreams:${libsVersions.lifecycles}"
+
+    //RX
+    implementation libs.rxAndroid
+    implementation libs.rxKotlin
+
+    //Picasso
+    implementation "com.squareup.picasso:picasso:${libsVersions.picasso}"
+
+    //Testing
+    testImplementation libs.junit
+    androidTestImplementation libs.testrunner
+    androidTestImplementation libs.espresso
 }
