--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+#PRODUCTION
+BASE_API_URL_PRODUCTION=""
+
+#DEVELOP
+BASE_API_URL_DEVELOP=""
