--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 #PRODUCTION
-BASE_API_URL_PRODUCTION=""
+BASE_API_URL_PRODUCTION="https://api.themoviedb.org/3/"
 
 #DEVELOP
-BASE_API_URL_DEVELOP=""
+BASE_API_URL_DEVELOP="https://api.themoviedb.org/3/"
