--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,8 @@ kotlin.code.style=official
 
 #PRODUCTION
 BASE_API_URL_PRODUCTION="https://api.themoviedb.org/3/"
+BASE_IMAGE_URL_PRODUCTION="https://image.tmdb.org/t/p/w500"
 
 #DEVELOP
 BASE_API_URL_DEVELOP="https://api.themoviedb.org/3/"
+BASE_IMAGE_URL_DEVELOP="https://image.tmdb.org/t/p/w500"
