--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,35 +14,39 @@ ext {
     ]
 
     libraries = [
-            appcompat    : "28.0.0",
-            androidx     : "1.1.0",
-            recycler     : "1.0.0",
-            constraint   : "1.1.3",
-            dagger       : "2.21",
-            rxandroid    : "2.0.2",
-            rxjava       : "2.1.8",
-            rxkotlin     : "2.4.0",
-            lifecycles   : "1.1.1",
-            picasso      : "2.71828",
-            retrofit     : "2.3.0",
-            okhttp       : "2.2.0",
-            interceptor  : "3.4.1",
-            room         : "2.1.0",
-            junit        : "4.12",
-            mockito      : "1.10.19",
-            testrunner   : "1.2.0",
-            espresso     : "3.2.0",
-            mockwebServer: "3.8.1",
+            appcompat     : "28.0.0",
+            androidx      : "1.1.0",
+            recycler      : "1.0.0",
+            constraint    : "1.1.3",
+            dagger        : "2.21",
+            rxandroid     : "2.0.2",
+            rxjava        : "2.1.8",
+            rxkotlin      : "2.4.0",
+            lifecycles    : "1.1.1",
+            picasso       : "2.71828",
+            retrofit      : "2.3.0",
+            okhttp        : "2.2.0",
+            interceptor   : "3.4.1",
+            room          : "2.1.0",
+            junit         : "4.12",
+            mockito       : "3.1.0",
+            mockito_inline: "2.13.0",
+            testrunner    : "1.2.0",
+            espresso      : "3.2.0",
+            arch_core     : "1.1.1",
+            mockwebServer : "3.8.1",
     ]
 
     libs = [
-            kotlin    : ('org.jetbrains.kotlin:kotlin-stdlib-jdk7:' + kotlin_version),
-            rxAndroid : ('io.reactivex.rxjava2:rxandroid:' + libraries.rxandroid),
-            rxKotlin  : ('io.reactivex.rxjava2:rxkotlin:' + libraries.rxkotlin),
+            kotlin        : ('org.jetbrains.kotlin:kotlin-stdlib-jdk7:' + kotlin_version),
+            rxAndroid     : ('io.reactivex.rxjava2:rxandroid:' + libraries.rxandroid),
+            rxKotlin      : ('io.reactivex.rxjava2:rxkotlin:' + libraries.rxkotlin),
 
-            junit     : ('junit:junit:' + libraries.junit),
-            mockito   : ('org.mockito:mockito-core:' + libraries.mockito),
-            testrunner: ('androidx.test:runner:' + libraries.testrunner),
-            espresso  : ('androidx.test.espresso:espresso-core:' + libraries.espresso),
+            junit         : ('junit:junit:' + libraries.junit),
+            mockito       : ('org.mockito:mockito-core:' + libraries.mockito),
+            mockito_inline: ('org.mockito:mockito-inline:' + libraries.mockito),
+            testrunner    : ('androidx.test:runner:' + libraries.testrunner),
+            espresso      : ('androidx.test.espresso:espresso-core:' + libraries.espresso),
+            arch_core     : ('android.arch.core:core-testing:' + libraries.arch_core)
     ]
 }
