--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,7 +16,7 @@ ext {
     libraries = [
             appcompat     : "28.0.0",
             androidx      : "1.1.0",
-            recycler      : "1.0.0",
+            design        : "1.0.0",
             constraint    : "1.1.3",
             dagger        : "2.21",
             rxandroid     : "2.0.2",
