GetSimilarTvShows useCase and repository

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -70,6 +70,7 @@ dependencies {
 
     testImplementation libs.junit
     testImplementation libs.mockito
+    testImplementation libs.mockito_inline
     androidTestImplementation libs.testrunner
     androidTestImplementation libs.espresso
 }
